--- a/crates/ysh-lib/Cargo.toml
+++ b/crates/ysh-lib/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "yuki_shell"
+name = "ysh-lib"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "crates/ysh-lib",
-    "crates/ysh-programs/*",
-]
-
 [dependencies]
+serde_json = "1.0.79"
