--- a/crates/ysh-programs/echo/Cargo.toml
+++ b/crates/ysh-programs/echo/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "yuki_shell"
+name = "echo"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "crates/ysh-lib",
-    "crates/ysh-programs/*",
-]
-
 [dependencies]
+ysh-lib = { path = "../../ysh-lib" }
